--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.2.5",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
+    "@angular/animations": "4.2.6",
+    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/common": "4.2.6",
+    "@angular/compiler": "4.2.6",
+    "@angular/core": "4.2.6",
     "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
+    "@angular/forms": "4.2.6",
+    "@angular/http": "4.2.6",
     "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/platform-browser-dynamic": "4.2.5",
-    "@angular/platform-server": "4.2.5",
-    "@angular/router": "4.2.5",
-    "@angular/upgrade": "4.2.5",
+    "@angular/platform-browser": "4.2.6",
+    "@angular/platform-browser-dynamic": "4.2.6",
+    "@angular/platform-server": "4.2.6",
+    "@angular/router": "4.2.6",
+    "@angular/upgrade": "4.2.6",
+    "@webcomponents/custom-elements": "1.0.0",
     "angular-in-memory-web-api": "0.3.2",
     "bootstrap": "3.3.7",
+    "clarity-angular": "0.10.0-alpha.4",
+    "clarity-icons": "0.10.0-alpha.4",
+    "clarity-ui": "0.10.0-alpha.4",
     "core-js": "2.4.1",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.8.0",
@@ -35,19 +39,21 @@
     "jquery": "3.2.1",
     "lodash": "4.17.4",
     "moment": "2.18.1",
+    "mutationobserver-shim": "^0.3.2",
     "ngx-bootstrap": "1.7.1",
+    "primeng": "4.1.0",
     "pump": "1.0.2",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
     "rxjs": "5.4.2",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.13"
   },
   "devDependencies": {
-    "@angular/cli": "1.2",
-    "@angular/compiler-cli": "4.2.5",
-    "@angular/language-service": "4.2.5",
+    "@angular/cli": "1.2.1",
+    "@angular/compiler-cli": "4.2.6",
+    "@angular/language-service": "4.2.6",
     "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.8",
+    "@types/node": "8.0.12",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "3.1.2",
     "concurrently": "3.5.0",
@@ -62,7 +68,7 @@
     "karma-remap-istanbul": "0.6.0",
     "lite-server": "2.3.0",
     "modernizr": "3.5.0",
-    "node-sass": "^4.5.3",
+    "node-sass": " 4.5.3",
     "path": "0.12.7",
     "protractor": "5.1.2",
     "ts-node": "3.2.0",
