--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "4.3.1",
     "@angular/router": "4.3.1",
     "@angular/upgrade": "4.3.1",
+    "@covalent/core": "^1.0.0-beta.6",
     "@webcomponents/custom-elements": "1.0.0",
     "angular-in-memory-web-api": "0.3.2",
     "bootstrap": "3.3.7",
