--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.3.1",
+    "@angular/animations": "^4.3.2",
     "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "4.3.1",
-    "@angular/compiler": "4.3.1",
-    "@angular/core": "4.3.1",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/core": "^4.3.2",
     "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "4.3.1",
-    "@angular/http": "4.3.1",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
     "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "4.3.1",
-    "@angular/platform-browser-dynamic": "4.3.1",
-    "@angular/platform-server": "4.3.1",
-    "@angular/router": "4.3.1",
-    "@angular/upgrade": "4.3.1",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/platform-server": "^4.3.2",
+    "@angular/router": "^4.3.2",
+    "@angular/upgrade": "^4.3.2",
     "@covalent/core": "^1.0.0-beta.6",
     "@webcomponents/custom-elements": "1.0.0",
     "angular-in-memory-web-api": "0.3.2",
@@ -41,25 +41,25 @@
     "lodash": "4.17.4",
     "moment": "2.18.1",
     "mutationobserver-shim": "^0.3.2",
-    "ngx-bootstrap": "1.8.0",
-    "primeng": "4.1.1",
+    "ngx-bootstrap": "^1.8.1",
+    "primeng": "^4.1.2",
     "pump": "1.0.2",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
     "rxjs": "5.4.2",
-    "zone.js": "0.8.14"
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "4.3.1",
-    "@angular/language-service": "4.3.1",
+    "@angular/cli": "1.2.6",
+    "@angular/compiler-cli": "4.3.2",
+    "@angular/language-service": "4.3.2",
     "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.14",
+    "@types/node": "8.0.17",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "3.1.2",
     "concurrently": "3.5.0",
     "del": "3.0.0",
-    "jasmine-core": "2.6.4",
+    "jasmine-core": "2.7.0",
     "jasmine-spec-reporter": "4.1.1",
     "jshint-stylish": "2.2.1",
     "karma": "1.7.0",
@@ -72,7 +72,7 @@
     "node-sass": " 4.5.3",
     "path": "0.12.7",
     "protractor": "5.1.2",
-    "ts-node": "3.2.0",
+    "ts-node": "3.3.0",
     "tslint": "5.5.0",
     "typescript": "2.4.2",
     "webdriver-manager": "12.0.6"
