--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.4",
-    "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
-    "@angular/core": "^4.3.4",
-    "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "^4.3.4",
-    "@angular/http": "^4.3.4",
-    "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "^4.3.4",
-    "@angular/platform-browser-dynamic": "^4.3.4",
-    "@angular/platform-server": "^4.3.4",
-    "@angular/router": "^4.3.4",
-    "@angular/upgrade": "^4.3.4",
-    "@covalent/core": "^1.0.0-beta.6",
-    "@webcomponents/custom-elements": "1.0.0",
+    "@angular/animations": "4.3.6",
+    "@angular/cdk": "2.0.0-beta.10",
+    "@angular/common": "4.3.6",
+    "@angular/compiler": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/flex-layout": "2.0.0-beta.9",
+    "@angular/forms": "4.3.6",
+    "@angular/http": "4.3.6",
+    "@angular/material": "2.0.0-beta.10",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/platform-server": "4.3.6",
+    "@angular/router": "4.3.6",
+    "@angular/upgrade": "4.3.6",
+    "@covalent/core": "1.0.0-beta.6",
+    "@webcomponents/custom-elements": "1.0.2",
     "angular-in-memory-web-api": "0.3.2",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.0",
-    "clarity-icons": "0.10.0",
-    "clarity-ui": "0.10.0",
+    "clarity-angular": "0.10.2",
+    "clarity-icons": "0.10.2",
+    "clarity-ui": "0.10.2",
     "core-js": "2.5.0",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.8.0",
@@ -40,29 +40,29 @@
     "jquery": "3.2.1",
     "lodash": "4.17.4",
     "moment": "2.18.1",
-    "mutationobserver-shim": "^0.3.2",
-    "ngx-bootstrap": "^1.8.1",
-    "primeng": "^4.1.3",
+    "mutationobserver-shim": "0.3.2",
+    "ngx-bootstrap": "1.9.1",
+    "primeng": "4.1.3",
     "pump": "1.0.2",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
     "rxjs": "5.4.3",
-    "zone.js": "^0.8.16"
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "4.3.4",
-    "@angular/language-service": "4.3.4",
-    "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.20",
+    "@angular/cli": "1.3.2",
+    "@angular/compiler-cli": "4.3.6",
+    "@angular/language-service": "4.3.6",
+    "@types/jasmine": "2.5.54",
+    "@types/node": "8.0.26",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "3.1.2",
     "concurrently": "3.5.0",
     "del": "3.0.0",
-    "jasmine-core": "2.7.0",
-    "jasmine-spec-reporter": "4.2.0",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "1.7.0",
+    "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
@@ -73,7 +73,7 @@
     "path": "0.12.7",
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
-    "tslint": "5.6.0",
+    "tslint": "5.7.0",
     "typescript": "2.4.2",
     "webdriver-manager": "12.0.6"
   }
