--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.4.3",
-    "@angular/cdk": "2.0.0-beta.11",
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/core": "4.4.3",
+    "@angular/animations": "4.4.4",
+    "@angular/cdk": "2.0.0-beta.12",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
+    "@angular/core": "4.4.4",
     "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/material": "2.0.0-beta.11",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "@angular/platform-server": "4.4.3",
-    "@angular/router": "4.4.3",
-    "@angular/upgrade": "4.4.3",
-    "@covalent/core": "1.0.0-beta.7",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/material": "2.0.0-beta.12",
+    "@angular/platform-browser": "4.4.4",
+    "@angular/platform-browser-dynamic": "4.4.4",
+    "@angular/platform-server": "4.4.4",
+    "@angular/router": "4.4.4",
+    "@angular/upgrade": "4.4.4",
+    "@covalent/core": "1.0.0-beta.8-1",
     "@webcomponents/custom-elements": "1.0.4",
-    "angular-in-memory-web-api": "0.4.6",
+    "angular-in-memory-web-api": "0.5.0",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.6",
-    "clarity-icons": "0.10.6",
-    "clarity-ui": "0.10.6",
+    "clarity-angular": "0.10.8",
+    "clarity-icons": "0.10.8",
+    "clarity-ui": "0.10.8",
     "core-js": "2.5.1",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.8.0",
@@ -42,21 +42,21 @@
     "moment": "2.18.1",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "1.9.3",
-    "primeng": "4.2.1",
+    "primeng": "4.2.2",
     "pump": "1.0.2",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
     "rxjs": "5.4.3",
-    "zone.js": "0.8.17"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/language-service": "4.4.3",
+    "@angular/cli": "1.4.5",
+    "@angular/compiler-cli": "4.4.4",
+    "@angular/language-service": "4.4.4",
     "@types/jasmine": "2.6.0",
-    "@types/node": "8.0.30",
+    "@types/node": "8.0.33",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "3.2.0",
+    "codelyzer": "3.2.1",
     "concurrently": "3.5.0",
     "del": "3.0.0",
     "jasmine-core": "2.8.0",
@@ -74,7 +74,7 @@
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
-    "typescript": "2.5.2",
+    "typescript": "2.5.3",
     "webdriver-manager": "12.0.6"
   }
 }
