--- a/package.json
+++ b/package.json
@@ -7,56 +7,56 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --fix",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.4.4",
-    "@angular/cdk": "2.0.0-beta.12",
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/material": "2.0.0-beta.12",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@angular/platform-server": "4.4.4",
-    "@angular/router": "4.4.4",
-    "@angular/upgrade": "4.4.4",
+    "@angular/animations": "5.0.1",
+    "@angular/cdk": "5.0.0-rc0",
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/flex-layout": "2.0.0-beta.10-4905443",
+    "@angular/forms": "5.0.1",
+    "@angular/http": "5.0.1",
+    "@angular/material": "5.0.0-rc0",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-browser-dynamic": "5.0.1",
+    "@angular/platform-server": "5.0.1",
+    "@angular/router": "5.0.1",
+    "@angular/upgrade": "5.0.1",
     "@covalent/core": "1.0.0-beta.8-1",
     "@webcomponents/custom-elements": "1.0.4",
-    "angular-in-memory-web-api": "0.5.0",
+    "angular-in-memory-web-api": "0.5.1",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.8",
-    "clarity-icons": "0.10.8",
-    "clarity-ui": "0.10.8",
+    "clarity-angular": "0.10.12",
+    "clarity-icons": "0.10.12",
+    "clarity-ui": "0.10.12",
     "core-js": "2.5.1",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.8.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
-    "moment": "2.18.1",
+    "moment": "2.19.1",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "1.9.3",
-    "primeng": "4.2.2",
+    "ngx-bootstrap": "2.0.0-beta.8",
+    "primeng": "5.0.0-rc.0",
     "pump": "1.0.2",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.2",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/language-service": "4.4.4",
-    "@types/jasmine": "2.6.0",
-    "@types/node": "8.0.33",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/language-service": "5.0.1",
+    "@types/jasmine": "2.6.3",
+    "@types/node": "8.0.50",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "3.2.1",
+    "codelyzer": "4.0.1",
     "concurrently": "3.5.0",
     "del": "3.0.0",
     "jasmine-core": "2.8.0",
@@ -69,12 +69,12 @@
     "karma-remap-istanbul": "0.6.0",
     "lite-server": "2.3.0",
     "modernizr": "3.5.0",
-    "node-sass": " 4.5.3",
+    "node-sass": " 4.6.0",
     "path": "0.12.7",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "ts-node": "3.3.0",
-    "tslint": "5.7.0",
-    "typescript": "2.5.3",
+    "tslint": "5.8.0",
+    "typescript": "2.6.1",
     "webdriver-manager": "12.0.6"
   }
 }
