--- a/package.json
+++ b/package.json
@@ -12,52 +12,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.1",
-    "@angular/cdk": "5.0.0-rc0",
-    "@angular/common": "5.0.1",
-    "@angular/compiler": "5.0.1",
-    "@angular/core": "5.0.1",
+    "@angular/animations": "5.0.5",
+    "@angular/cdk": "5.0.0-rc.2",
+    "@angular/common": "5.0.5",
+    "@angular/compiler": "5.0.5",
+    "@angular/core": "5.0.5",
     "@angular/flex-layout": "2.0.0-beta.10-4905443",
-    "@angular/forms": "5.0.1",
-    "@angular/http": "5.0.1",
-    "@angular/material": "5.0.0-rc0",
-    "@angular/platform-browser": "5.0.1",
-    "@angular/platform-browser-dynamic": "5.0.1",
-    "@angular/platform-server": "5.0.1",
-    "@angular/router": "5.0.1",
-    "@angular/upgrade": "5.0.1",
-    "@covalent/core": "1.0.0-beta.8-1",
-    "@webcomponents/custom-elements": "1.0.4",
+    "@angular/forms": "5.0.5",
+    "@angular/http": "5.0.5",
+    "@angular/material": "5.0.0-rc.2",
+    "@angular/platform-browser": "5.0.5",
+    "@angular/platform-browser-dynamic": "5.0.5",
+    "@angular/platform-server": "5.0.5",
+    "@angular/router": "5.0.5",
+    "@angular/upgrade": "5.0.5",
+    "@covalent/core": "1.0.0-rc.0",
+    "@webcomponents/custom-elements": "1.0.6",
     "angular-in-memory-web-api": "0.5.1",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.12",
-    "clarity-icons": "0.10.12",
-    "clarity-ui": "0.10.12",
+    "clarity-angular": "0.10.16",
+    "clarity-icons": "0.10.16",
+    "clarity-ui": "0.10.16",
     "core-js": "2.5.1",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.8.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
-    "moment": "2.19.1",
+    "moment": "2.19.3",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "2.0.0-beta.8",
-    "primeng": "5.0.0-rc.0",
-    "pump": "1.0.2",
+    "ngx-bootstrap": "2.0.0-beta.10",
+    "primeng": "5.0.2",
+    "pump": "2.0.0",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.4",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/language-service": "5.0.1",
-    "@types/jasmine": "2.6.3",
-    "@types/node": "8.0.50",
+    "@angular/cli": "1.5.5",
+    "@angular/compiler-cli": "5.0.5",
+    "@angular/language-service": "5.0.5",
+    "@types/jasmine": "2.8.2",
+    "@types/node": "8.0.55",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.0.1",
-    "concurrently": "3.5.0",
+    "concurrently": "3.5.1",
     "del": "3.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -65,16 +65,16 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-jasmine": "1.1.0",
+    "karma-jasmine": "1.1.1",
     "karma-remap-istanbul": "0.6.0",
     "lite-server": "2.3.0",
     "modernizr": "3.5.0",
-    "node-sass": " 4.6.0",
+    "node-sass": " 4.7.2",
     "path": "0.12.7",
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
-    "typescript": "2.6.1",
+    "typescript": "2.6.2",
     "webdriver-manager": "12.0.6"
   }
 }
