--- a/package.json
+++ b/package.json
@@ -12,57 +12,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.5",
-    "@angular/cdk": "5.0.0-rc.2",
-    "@angular/common": "5.0.5",
-    "@angular/compiler": "5.0.5",
-    "@angular/core": "5.0.5",
-    "@angular/flex-layout": "2.0.0-beta.10-4905443",
-    "@angular/forms": "5.0.5",
-    "@angular/http": "5.0.5",
-    "@angular/material": "5.0.0-rc.2",
-    "@angular/platform-browser": "5.0.5",
-    "@angular/platform-browser-dynamic": "5.0.5",
-    "@angular/platform-server": "5.0.5",
-    "@angular/router": "5.0.5",
-    "@angular/upgrade": "5.0.5",
-    "@covalent/core": "1.0.0-rc.0",
+    "@angular/animations": "5.1.2",
+    "@angular/cdk": "5.0.2",
+    "@angular/common": "5.1.2",
+    "@angular/compiler": "5.1.2",
+    "@angular/core": "5.1.2",
+    "@angular/flex-layout": "2.0.0-beta.12",
+    "@angular/forms": "5.1.2",
+    "@angular/http": "5.1.2",
+    "@angular/material": "5.0.2",
+    "@angular/platform-browser": "5.1.2",
+    "@angular/platform-browser-dynamic": "5.1.2",
+    "@angular/platform-server": "5.1.2",
+    "@angular/router": "5.1.2",
+    "@angular/upgrade": "5.1.2",
+    "@covalent/core": "1.0.0-rc.1",
     "@webcomponents/custom-elements": "1.0.6",
-    "angular-in-memory-web-api": "0.5.1",
+    "angular-in-memory-web-api": "0.5.2",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.16",
-    "clarity-icons": "0.10.16",
-    "clarity-ui": "0.10.16",
-    "core-js": "2.5.1",
+    "clarity-angular": "0.10.19",
+    "clarity-icons": "0.10.19",
+    "clarity-ui": "0.10.19",
+    "core-js": "2.5.3",
     "es6-shim": "0.35.3",
-    "flag-icon-css": "2.8.0",
+    "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
-    "moment": "2.19.3",
+    "moment": "2.20.1",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "2.0.0-beta.10",
+    "ngx-bootstrap": "2.0.0-rc.0",
     "primeng": "5.0.2",
+    "protractor": "5.2.2",
     "pump": "2.0.0",
     "reflect-metadata": "0.1.10",
     "reselect": "3.0.1",
-    "rxjs": "5.5.4",
+    "rxjs": "5.5.6",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "5.0.5",
-    "@angular/language-service": "5.0.5",
+    "@angular/cli": "1.6.2",
+    "@angular/compiler-cli": "5.1.2",
+    "@angular/language-service": "5.1.2",
     "@types/jasmine": "2.8.2",
-    "@types/node": "8.0.55",
+    "@types/node": "8.5.2",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "4.0.1",
+    "codelyzer": "4.0.2",
     "concurrently": "3.5.1",
     "del": "3.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "1.7.1",
+    "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.1",
@@ -71,8 +72,7 @@
     "modernizr": "3.5.0",
     "node-sass": " 4.7.2",
     "path": "0.12.7",
-    "protractor": "5.2.0",
-    "ts-node": "3.3.0",
+    "ts-node": "4.1.0",
     "tslint": "5.8.0",
     "typescript": "2.6.2",
     "webdriver-manager": "12.0.6"
