--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.1.2",
+    "@angular/animations": "5.2.1",
     "@angular/cdk": "5.0.2",
-    "@angular/common": "5.1.2",
-    "@angular/compiler": "5.1.2",
-    "@angular/core": "5.1.2",
+    "@angular/common": "5.2.1",
+    "@angular/compiler": "5.2.1",
+    "@angular/core": "5.2.1",
     "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "5.1.2",
-    "@angular/http": "5.1.2",
+    "@angular/forms": "5.2.1",
+    "@angular/http": "5.2.1",
     "@angular/material": "5.0.2",
-    "@angular/platform-browser": "5.1.2",
-    "@angular/platform-browser-dynamic": "5.1.2",
-    "@angular/platform-server": "5.1.2",
-    "@angular/router": "5.1.2",
-    "@angular/upgrade": "5.1.2",
-    "@covalent/core": "1.0.0-rc.1",
-    "@webcomponents/custom-elements": "1.0.6",
+    "@angular/platform-browser": "5.2.1",
+    "@angular/platform-browser-dynamic": "5.2.1",
+    "@angular/platform-server": "5.2.1",
+    "@angular/router": "5.2.1",
+    "@angular/upgrade": "5.2.1",
+    "@covalent/core": "1.0.0-rc.2",
+    "@webcomponents/custom-elements": "1.0.8",
     "angular-in-memory-web-api": "0.5.2",
     "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.19",
-    "clarity-icons": "0.10.19",
-    "clarity-ui": "0.10.19",
+    "clarity-angular": "0.10.22",
+    "clarity-icons": "0.10.22",
+    "clarity-ui": "0.10.22",
     "core-js": "2.5.3",
     "es6-shim": "0.35.3",
     "flag-icon-css": "2.9.0",
@@ -42,20 +42,20 @@
     "moment": "2.20.1",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.0-rc.0",
-    "primeng": "5.0.2",
+    "primeng": "5.2.0-rc.1",
     "protractor": "5.2.2",
     "pump": "2.0.0",
-    "reflect-metadata": "0.1.10",
+    "reflect-metadata": "0.1.12",
     "reselect": "3.0.1",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "5.1.2",
-    "@angular/language-service": "5.1.2",
-    "@types/jasmine": "2.8.2",
-    "@types/node": "8.5.2",
+    "@angular/compiler-cli": "5.2.1",
+    "@angular/language-service": "5.2.1",
+    "@types/jasmine": "2.8.4",
+    "@types/node": "9.3.0",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.0.2",
     "concurrently": "3.5.1",
@@ -73,7 +73,7 @@
     "node-sass": " 4.7.2",
     "path": "0.12.7",
     "ts-node": "4.1.0",
-    "tslint": "5.8.0",
+    "tslint": "5.9.1",
     "typescript": "2.6.2",
     "webdriver-manager": "12.0.6"
   }
