--- a/package.json
+++ b/package.json
@@ -12,55 +12,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.1",
-    "@angular/cdk": "5.0.2",
-    "@angular/common": "5.2.1",
-    "@angular/compiler": "5.2.1",
-    "@angular/core": "5.2.1",
+    "@angular/animations": "5.2.6",
+    "@angular/cdk": "5.2.2",
+    "@angular/common": "5.2.6",
+    "@angular/compiler": "5.2.6",
+    "@angular/core": "5.2.6",
     "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "5.2.1",
-    "@angular/http": "5.2.1",
-    "@angular/material": "5.0.2",
-    "@angular/platform-browser": "5.2.1",
-    "@angular/platform-browser-dynamic": "5.2.1",
-    "@angular/platform-server": "5.2.1",
-    "@angular/router": "5.2.1",
-    "@angular/upgrade": "5.2.1",
-    "@covalent/core": "1.0.0-rc.2",
+    "@angular/forms": "5.2.6",
+    "@angular/http": "5.2.6",
+    "@angular/material": "5.2.2",
+    "@angular/platform-browser": "5.2.6",
+    "@angular/platform-browser-dynamic": "5.2.6",
+    "@angular/platform-server": "5.2.6",
+    "@angular/router": "5.2.6",
+    "@angular/upgrade": "5.2.6",
+    "@covalent/core": "1.0.0",
+    "@fortawesome/fontawesome": "1.1.3",
+    "@fortawesome/fontawesome-free-brands": "5.0.6",
+    "@fortawesome/fontawesome-free-regular": "5.0.6",
+    "@fortawesome/fontawesome-free-solid": "5.0.6",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.3",
     "@webcomponents/custom-elements": "1.0.8",
-    "angular-in-memory-web-api": "0.5.2",
-    "bootstrap": "3.3.7",
-    "clarity-angular": "0.10.22",
-    "clarity-icons": "0.10.22",
-    "clarity-ui": "0.10.22",
+    "angular-in-memory-web-api": "0.5.3",
+    "bootstrap": "4.0.0",
+    "clarity-angular": "0.10.26",
+    "clarity-icons": "0.10.26",
+    "clarity-ui": "0.10.26",
     "core-js": "2.5.3",
     "es6-shim": "0.35.3",
-    "flag-icon-css": "2.9.0",
-    "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "flag-icon-css": "3.0.0",
+    "jquery": "3.3.1",
+    "lodash": "4.17.5",
     "moment": "2.20.1",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "2.0.0-rc.0",
-    "primeng": "5.2.0-rc.1",
-    "protractor": "5.2.2",
-    "pump": "2.0.0",
+    "ngx-bootstrap": "2.0.2",
+    "primeng": "5.2.0",
+    "protractor": "5.3.0",
+    "pump": "3.0.0",
     "reflect-metadata": "0.1.12",
     "reselect": "3.0.1",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "5.2.1",
-    "@angular/language-service": "5.2.1",
-    "@types/jasmine": "2.8.4",
-    "@types/node": "9.3.0",
+    "@angular/cli": "^1.7.1",
+    "@angular/compiler-cli": "5.2.6",
+    "@angular/language-service": "5.2.6",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "9.4.6",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "4.0.2",
+    "codelyzer": "4.1.0",
     "concurrently": "3.5.1",
     "del": "3.0.0",
-    "jasmine-core": "2.8.0",
+    "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
     "karma": "2.0.0",
@@ -72,9 +76,9 @@
     "modernizr": "3.5.0",
     "node-sass": " 4.7.2",
     "path": "0.12.7",
-    "ts-node": "4.1.0",
+    "ts-node": "5.0.0",
     "tslint": "5.9.1",
-    "typescript": "2.6.2",
+    "typescript": "2.7.2",
     "webdriver-manager": "12.0.6"
   }
 }
