--- a/package.json
+++ b/package.json
@@ -7,64 +7,67 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint --fix",
+    "lint": "tslint --fix --project src/tsconfig.app.json",
+    "stylelint": "stylelint --fix '**/*.scss' --syntax scss",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.6",
-    "@angular/cdk": "5.2.2",
-    "@angular/common": "5.2.6",
-    "@angular/compiler": "5.2.6",
-    "@angular/core": "5.2.6",
-    "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "5.2.6",
-    "@angular/http": "5.2.6",
-    "@angular/material": "5.2.2",
-    "@angular/platform-browser": "5.2.6",
-    "@angular/platform-browser-dynamic": "5.2.6",
-    "@angular/platform-server": "5.2.6",
-    "@angular/router": "5.2.6",
-    "@angular/upgrade": "5.2.6",
+    "@angular/animations": "5.2.7",
+    "@angular/cdk": "5.2.4",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
+    "@angular/flex-layout": "5.0.0-beta.13",
+    "@angular/forms": "5.2.7",
+    "@angular/http": "5.2.7",
+    "@angular/material": "5.2.4",
+    "@angular/platform-browser": "5.2.7",
+    "@angular/platform-browser-dynamic": "5.2.7",
+    "@angular/platform-server": "5.2.7",
+    "@angular/router": "5.2.7",
+    "@angular/upgrade": "5.2.7",
     "@covalent/core": "1.0.0",
-    "@fortawesome/fontawesome": "1.1.3",
-    "@fortawesome/fontawesome-free-brands": "5.0.6",
-    "@fortawesome/fontawesome-free-regular": "5.0.6",
-    "@fortawesome/fontawesome-free-solid": "5.0.6",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.3",
+    "@fortawesome/fontawesome": "1.1.4",
+    "@fortawesome/fontawesome-free-brands": "5.0.8",
+    "@fortawesome/fontawesome-free-regular": "5.0.8",
+    "@fortawesome/fontawesome-free-solid": "5.0.8",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.4",
     "@webcomponents/custom-elements": "1.0.8",
     "angular-in-memory-web-api": "0.5.3",
     "bootstrap": "4.0.0",
-    "clarity-angular": "0.10.26",
-    "clarity-icons": "0.10.26",
-    "clarity-ui": "0.10.26",
+    "clarity-angular": "0.10.27",
+    "clarity-icons": "0.10.27",
+    "clarity-ui": "0.10.27",
     "core-js": "2.5.3",
     "es6-shim": "0.35.3",
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
     "lodash": "4.17.5",
-    "moment": "2.20.1",
+    "moment": "2.21.0",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.2",
-    "primeng": "5.2.0",
+    "primeng": "5.2.1",
     "protractor": "5.3.0",
     "pump": "3.0.0",
     "reflect-metadata": "0.1.12",
     "reselect": "3.0.1",
     "rxjs": "5.5.6",
+    "stylelint": "9.1.1",
+    "stylelint-config-standard": "18.2.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "5.2.6",
-    "@angular/language-service": "5.2.6",
+    "@angular/cli": "1.7.2",
+    "@angular/compiler-cli": "5.2.7",
+    "@angular/language-service": "5.2.7",
     "@types/jasmine": "2.8.6",
     "@types/node": "9.4.6",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "4.1.0",
+    "codelyzer": "4.2.1",
     "concurrently": "3.5.1",
     "del": "3.0.0",
-    "jasmine-core": "2.99.1",
+    "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
     "karma": "2.0.0",
@@ -73,10 +76,10 @@
     "karma-jasmine": "1.1.1",
     "karma-remap-istanbul": "0.6.0",
     "lite-server": "2.3.0",
-    "modernizr": "3.5.0",
+    "modernizr": "3.6.0",
     "node-sass": " 4.7.2",
     "path": "0.12.7",
-    "ts-node": "5.0.0",
+    "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "typescript": "2.7.2",
     "webdriver-manager": "12.0.6"
