--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.7",
+    "@angular/animations": "5.2.9",
     "@angular/cdk": "5.2.4",
-    "@angular/common": "5.2.7",
-    "@angular/compiler": "5.2.7",
-    "@angular/core": "5.2.7",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/core": "5.2.9",
     "@angular/flex-layout": "5.0.0-beta.13",
-    "@angular/forms": "5.2.7",
-    "@angular/http": "5.2.7",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
     "@angular/material": "5.2.4",
-    "@angular/platform-browser": "5.2.7",
-    "@angular/platform-browser-dynamic": "5.2.7",
-    "@angular/platform-server": "5.2.7",
-    "@angular/router": "5.2.7",
-    "@angular/upgrade": "5.2.7",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/platform-server": "5.2.9",
+    "@angular/router": "5.2.9",
+    "@angular/upgrade": "5.2.9",
     "@covalent/core": "1.0.0",
     "@fortawesome/fontawesome": "1.1.4",
     "@fortawesome/fontawesome-free-brands": "5.0.8",
@@ -34,7 +34,7 @@
     "@fortawesome/fontawesome-free-solid": "5.0.8",
     "@fortawesome/fontawesome-free-webfonts": "1.0.4",
     "@webcomponents/custom-elements": "1.0.8",
-    "angular-in-memory-web-api": "0.5.3",
+    "angular-in-memory-web-api": "0.5.4",
     "bootstrap": "4.0.0",
     "clarity-angular": "0.10.27",
     "clarity-icons": "0.10.27",
@@ -46,27 +46,21 @@
     "lodash": "4.17.5",
     "moment": "2.21.0",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "2.0.2",
-    "primeng": "5.2.1",
-    "protractor": "5.3.0",
-    "pump": "3.0.0",
+    "ngx-bootstrap": "2.0.3",
+    "primeng": "5.2.3",
     "reflect-metadata": "0.1.12",
-    "reselect": "3.0.1",
-    "rxjs": "5.5.6",
-    "stylelint": "9.1.1",
-    "stylelint-config-standard": "18.2.0",
+    "rxjs": "5.5.7",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.2",
-    "@angular/compiler-cli": "5.2.7",
-    "@angular/language-service": "5.2.7",
+    "@angular/cli": "1.7.3",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/language-service": "5.2.9",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.4.6",
+    "@types/node": "9.4.7",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.2.1",
     "concurrently": "3.5.1",
-    "del": "3.0.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
@@ -78,9 +72,14 @@
     "lite-server": "2.3.0",
     "modernizr": "3.6.0",
     "node-sass": " 4.7.2",
-    "path": "0.12.7",
+    "npm-check-updates": "2.14.1",
+    "prettier": "^1.11.1",
+    "protractor": "5.3.0",
+    "stylelint": "9.1.3",
+    "stylelint-config-standard": "18.2.0",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
+    "tslint-config-prettier": "1.10.0",
     "typescript": "2.7.2",
     "webdriver-manager": "12.0.6"
   }
