--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "modernizr": "3.6.0",
     "node-sass": " 4.7.2",
     "npm-check-updates": "2.14.1",
-    "prettier": "^1.11.1",
+    "prettier": "1.11.1",
     "protractor": "5.3.0",
     "stylelint": "9.1.3",
     "stylelint-config-standard": "18.2.0",
