Update Lint Rules

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "build": "ng build",
+    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "lint": "tslint --fix --project src/tsconfig.app.json",
+    "lint:check": "tslint-config-prettier-check ./tslint.json",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "tslint --fix --project src/tsconfig.app.json",
     "stylelint": "stylelint --fix '**/*.scss' --syntax scss",
+    "test": "ng test",
+    "test:all": "concurrently --kill-others-on-fail 'npm run lint' 'npm run stylelint' 'npm run test'",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -67,8 +71,9 @@
     "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-jasmine": "1.1.1",
-    "karma-remap-istanbul": "0.6.0",
+    "karma-coverage-istanbul-reporter": "1.4.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "1.0.0",
     "lite-server": "2.3.0",
     "modernizr": "3.6.0",
     "node-sass": " 4.7.2",
