--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "scripts": {
     "build": "ng build",
+    "doc:build": "compodoc -p src/tsconfig.app.json",
+    "doc:serve": "compodoc -s",
+    "doc:buildandserve": "compodoc -p src/tsconfig.app.json -s",
     "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss}\"",
     "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss}\"",
     "lint": "tslint --fix --project src/tsconfig.app.json",
@@ -32,18 +35,18 @@
     "@angular/router": "5.2.9",
     "@angular/upgrade": "5.2.9",
     "@covalent/core": "1.0.0",
-    "@fortawesome/fontawesome": "1.1.4",
-    "@fortawesome/fontawesome-free-brands": "5.0.8",
-    "@fortawesome/fontawesome-free-regular": "5.0.8",
-    "@fortawesome/fontawesome-free-solid": "5.0.8",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.4",
-    "@webcomponents/custom-elements": "1.0.8",
-    "angular-in-memory-web-api": "0.5.4",
+    "@fortawesome/fontawesome": "1.1.5",
+    "@fortawesome/fontawesome-free-brands": "5.0.9",
+    "@fortawesome/fontawesome-free-regular": "5.0.9",
+    "@fortawesome/fontawesome-free-solid": "5.0.9",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.5",
+    "@webcomponents/custom-elements": "1.0.9",
+    "angular-in-memory-web-api": "0.6.0",
     "bootstrap": "4.0.0",
     "clarity-angular": "0.10.27",
     "clarity-icons": "0.10.27",
     "clarity-ui": "0.10.27",
-    "core-js": "2.5.3",
+    "core-js": "2.5.4",
     "es6-shim": "0.35.3",
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
@@ -51,17 +54,18 @@
     "moment": "2.21.0",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.3",
-    "primeng": "5.2.3",
+    "primeng": "5.2.4",
     "reflect-metadata": "0.1.12",
-    "rxjs": "5.5.7",
+    "rxjs": "5.5.8",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.7.3",
     "@angular/compiler-cli": "5.2.9",
     "@angular/language-service": "5.2.9",
+    "@compodoc/compodoc": "1.0.9",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.4.7",
+    "@types/node": "9.6.1",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.2.1",
     "concurrently": "3.5.1",
@@ -71,12 +75,12 @@
     "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.4.1",
-    "karma-jasmine": "1.1.0",
+    "karma-coverage-istanbul-reporter": "1.4.2",
+    "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "1.0.0",
     "lite-server": "2.3.0",
     "modernizr": "3.6.0",
-    "node-sass": " 4.7.2",
+    "node-sass": "4.8.3",
     "npm-check-updates": "2.14.1",
     "prettier": "1.11.1",
     "protractor": "5.3.0",
@@ -85,7 +89,7 @@
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.10.0",
-    "typescript": "2.7.2",
+    "typescript": "2.8.1",
     "webdriver-manager": "12.0.6"
   }
 }
