--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
- printWidth: 120,
- useTabs: false,
- tabWidth: 4,
- semi: true,
- bracketSpacing: true
+ "printWidth": 120,
+ "useTabs": false,
+ "tabWidth": 4,
+ "ssemi": true,
+ "bracketSpacing": true
 }
