--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "build": "ng build",
-    "doc:build": "compodoc -p src/tsconfig.app.json",
+    "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
     "doc:serve": "compodoc -s",
-    "doc:buildandserve": "compodoc -p src/tsconfig.app.json -s",
+    "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
     "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss}\"",
     "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss}\"",
     "lint": "tslint --fix --project src/tsconfig.app.json",
@@ -25,7 +25,7 @@
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
     "@angular/core": "5.2.9",
-    "@angular/flex-layout": "5.0.0-beta.13",
+    "@angular/flex-layout": "5.0.0-beta.14",
     "@angular/forms": "5.2.9",
     "@angular/http": "5.2.9",
     "@angular/material": "5.2.4",
@@ -51,21 +51,22 @@
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
     "lodash": "4.17.5",
-    "moment": "2.21.0",
+    "moment": "2.22.0",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.3",
+    "ngx-logger": "2.1.1",
     "primeng": "5.2.4",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.8",
-    "zone.js": "0.8.20"
+    "zone.js": "0.8.25"
   },
   "devDependencies": {
     "@angular/cli": "1.7.3",
     "@angular/compiler-cli": "5.2.9",
     "@angular/language-service": "5.2.9",
-    "@compodoc/compodoc": "1.0.9",
+    "@compodoc/compodoc": "1.1.1",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.6.1",
+    "@types/node": "9.6.2",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.2.1",
     "concurrently": "3.5.1",
@@ -83,8 +84,8 @@
     "node-sass": "4.8.3",
     "npm-check-updates": "2.14.1",
     "prettier": "1.11.1",
-    "protractor": "5.3.0",
-    "stylelint": "9.1.3",
+    "protractor": "5.3.1",
+    "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
