Remove generated docu

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tslint --fix --project src/tsconfig.app.json",
     "lint:check": "tslint-config-prettier-check ./tslint.json",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "stylelint": "stylelint --fix '**/*.scss' --syntax scss",
     "test": "ng test",
     "test:all": "concurrently --kill-others-on-fail 'npm run lint' 'npm run stylelint' 'npm run test'",
@@ -36,17 +36,17 @@
     "@angular/upgrade": "5.2.9",
     "@covalent/core": "1.0.0",
     "@fortawesome/fontawesome": "1.1.5",
-    "@fortawesome/fontawesome-free-brands": "5.0.9",
-    "@fortawesome/fontawesome-free-regular": "5.0.9",
-    "@fortawesome/fontawesome-free-solid": "5.0.9",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.5",
-    "@webcomponents/custom-elements": "1.0.9",
+    "@fortawesome/fontawesome-free-brands": "5.0.10",
+    "@fortawesome/fontawesome-free-regular": "5.0.10",
+    "@fortawesome/fontawesome-free-solid": "5.0.10",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.6",
+    "@webcomponents/custom-elements": "1.1.0",
     "angular-in-memory-web-api": "0.6.0",
-    "bootstrap": "4.0.0",
+    "bootstrap": "4.1.0",
     "clarity-angular": "0.10.27",
     "clarity-icons": "0.10.27",
     "clarity-ui": "0.10.27",
-    "core-js": "2.5.4",
+    "core-js": "2.5.5",
     "es6-shim": "0.35.3",
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
@@ -54,19 +54,19 @@
     "moment": "2.22.0",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.3",
-    "ngx-logger": "2.1.1",
+    "ngx-logger": "2.2.0",
     "primeng": "5.2.4",
     "reflect-metadata": "0.1.12",
-    "rxjs": "5.5.8",
-    "zone.js": "0.8.25"
+    "rxjs": "5.5.10",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
+    "@angular/cli": "1.7.4",
     "@angular/compiler-cli": "5.2.9",
     "@angular/language-service": "5.2.9",
-    "@compodoc/compodoc": "1.1.1",
+    "@compodoc/compodoc": "1.1.2",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.6.2",
+    "@types/node": "9.6.4",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.2.1",
     "concurrently": "3.5.1",
@@ -83,7 +83,7 @@
     "modernizr": "3.6.0",
     "node-sass": "4.8.3",
     "npm-check-updates": "2.14.1",
-    "prettier": "1.11.1",
+    "prettier": "1.12.0",
     "protractor": "5.3.1",
     "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
