Added new codelyzer rules

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
     "doc:serve": "compodoc -s",
     "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
-    "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss}\"",
-    "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
     "lint": "tslint --fix --project src/tsconfig.app.json",
     "lint:check": "tslint-config-prettier-check ./tslint.json",
     "ng": "ng",
@@ -53,7 +53,7 @@
     "moment": "2.22.1",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.4",
-    "ngx-logger": "2.2.0",
+    "ngx-logger": "2.2.3",
     "primeng": "5.2.4",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.10",
@@ -65,14 +65,14 @@
     "@angular/language-service": "5.2.10",
     "@compodoc/compodoc": "1.1.2",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.6.5",
+    "@types/node": "9.6.6",
     "bootstrap-sass": "3.3.7",
-    "codelyzer": "4.2.1",
+    "codelyzer": "4.3.0",
     "concurrently": "3.5.1",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "2.0.0",
+    "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "1.4.2",
@@ -88,8 +88,8 @@
     "stylelint-config-standard": "18.2.0",
     "ts-node": "6.0.0",
     "tslint": "5.9.1",
-    "tslint-config-prettier": "1.10.0",
-    "typescript": "2.8.1",
+    "tslint-config-prettier": "1.12.0",
+    "typescript": "2.8.3",
     "webdriver-manager": "12.0.6"
   }
 }
