Upgrade to Angular 6rc

--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/cdk": "5.2.5",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
+    "@angular/animations": "6.0.0-rc.6",
+    "@angular/cdk": "6.0.0-rc.14",
+    "@angular/common": "6.0.0-rc.6",
+    "@angular/compiler": "6.0.0-rc.6",
+    "@angular/core": "6.0.0-rc.6",
     "@angular/flex-layout": "5.0.0-beta.14",
-    "@angular/forms": "5.2.10",
-    "@angular/material": "5.2.5",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/platform-server": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@angular/upgrade": "5.2.10",
+    "@angular/forms": "6.0.0-rc.6",
+    "@angular/material": "6.0.0-rc.14",
+    "@angular/platform-browser": "6.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "6.0.0-rc.6",
+    "@angular/platform-server": "6.0.0-rc.6",
+    "@angular/router": "6.0.0-rc.6",
+    "@angular/upgrade": "6.0.0-rc.6",
     "@covalent/core": "1.0.0",
     "@fortawesome/fontawesome": "1.1.6",
     "@fortawesome/fontawesome-free-brands": "5.0.11",
@@ -57,13 +57,13 @@
     "primeng": "5.2.5",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.0.0",
-    "rxjs-compat": "^6.0.0",
+    "rxjs-compat": "6.0.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/language-service": "5.2.10",
+    "@angular/cli": "6.0.0-rc.9",
+    "@angular/compiler-cli": "6.0.0-rc.6",
+    "@angular/language-service": "6.0.0-rc.6",
     "@compodoc/compodoc": "1.1.2",
     "@types/jasmine": "2.8.6",
     "@types/node": "10.0.2",
@@ -90,7 +90,8 @@
     "ts-node": "6.0.2",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.12.0",
-    "typescript": "2.8.3",
-    "webdriver-manager": "12.0.6"
+    "typescript": "2.7.2",
+    "webdriver-manager": "12.0.6",
+    "@angular-devkit/build-angular": "~0.5.12"
   }
 }
