--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "node_modules/clarity-ui/clarity-ui.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/omega/theme.css",
-              "node_modules/@covalent/core/common/platform.scss"
+              "node_modules/@covalent/core/common/platform.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss"
+
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -95,7 +97,8 @@
               "node_modules/clarity-ui/clarity-ui.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/omega/theme.css",
-              "node_modules/@covalent/core/common/platform.scss"
+              "node_modules/@covalent/core/common/platform.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "assets": [
               "src/assets",
