Update Prettier and Format

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "doc:serve": "compodoc -s",
     "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
     "e2e": "ng e2e",
-    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
-    "format:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "format:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
     "lint": "tslint --fix --project src/tsconfig.app.json",
     "lint:check": "tslint-config-prettier-check ./tslint.json",
     "modernizr": "modernizr -uc modernizr-config.json -d modernizr-custom.min.js",
@@ -23,13 +23,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.0.2",
-    "@angular/cdk": "7.0.2",
+    "@angular/cdk": "7.0.3",
     "@angular/common": "7.0.2",
     "@angular/compiler": "7.0.2",
     "@angular/core": "7.0.2",
     "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "7.0.2",
-    "@angular/material": "7.0.2",
+    "@angular/material": "7.0.3",
     "@angular/platform-browser": "7.0.2",
     "@angular/platform-browser-dynamic": "7.0.2",
     "@angular/platform-server": "7.0.2",
@@ -67,7 +67,7 @@
     "@angular/compiler-cli": "7.0.2",
     "@angular/language-service": "7.0.2",
     "@compodoc/compodoc": "1.1.6",
-    "@types/jasmine": "2.8.9",
+    "@types/jasmine": "2.8.11",
     "@types/node": "10.12.2",
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
@@ -84,8 +84,8 @@
     "karma-phantomjs-launcher": "1.0.4",
     "karma-remap-istanbul": "0.6.0",
     "modernizr": "3.6.0",
-    "node-sass": "4.9.4",
-    "prettier": "1.14.3",
+    "node-sass": "4.10.0",
+    "prettier": "1.15.1",
     "protractor": "5.4.1",
     "stylelint": "9.7.1",
     "stylelint-config-prettier": "4.0.0",
