Add ngx-translate, update devs

--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.6",
+        "@angular/animations": "7.2.7",
         "@angular/cdk": "7.3.3",
-        "@angular/common": "7.2.6",
-        "@angular/compiler": "7.2.6",
-        "@angular/core": "7.2.6",
+        "@angular/common": "7.2.7",
+        "@angular/compiler": "7.2.7",
+        "@angular/core": "7.2.7",
         "@angular/flex-layout": "7.0.0-beta.23",
-        "@angular/forms": "7.2.6",
+        "@angular/forms": "7.2.7",
         "@angular/material": "7.3.3",
-        "@angular/platform-browser": "7.2.6",
-        "@angular/platform-browser-dynamic": "7.2.6",
-        "@angular/platform-server": "7.2.6",
-        "@angular/router": "7.2.6",
-        "@angular/upgrade": "7.2.6",
+        "@angular/platform-browser": "7.2.7",
+        "@angular/platform-browser-dynamic": "7.2.7",
+        "@angular/platform-server": "7.2.7",
+        "@angular/router": "7.2.7",
+        "@angular/upgrade": "7.2.7",
         "@clr/angular": "1.1.0",
         "@clr/icons": "1.1.0",
         "@clr/ui": "1.1.0",
@@ -47,11 +47,12 @@
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
         "@ng-bootstrap/ng-bootstrap": "4.0.4",
-        "@ng-select/ng-select": "2.15.3",
+        "@ng-select/ng-select": "2.16.0",
+        "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.2.1",
         "angular-calendar": "0.26.6",
         "angular-draggable-droppable": "4.1.0",
-        "angular-resizable-element": "3.2.3",
+        "angular-resizable-element": "3.2.4",
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
         "calendar-utils": "0.2.3",
@@ -75,19 +76,19 @@
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.3",
-        "@angular-devkit/core": "7.3.3",
-        "@angular/cli": "7.3.3",
-        "@angular/compiler-cli": "7.2.6",
-        "@angular/language-service": "7.2.6",
-        "@compodoc/compodoc": "1.1.8",
+        "@angular-devkit/build-angular": "0.13.4",
+        "@angular-devkit/core": "7.3.4",
+        "@angular/cli": "7.3.4",
+        "@angular/compiler-cli": "7.2.7",
+        "@angular/language-service": "7.2.7",
+        "@compodoc/compodoc": "1.1.9",
         "@types/jasmine": "3.3.9",
-        "@types/node": "11.9.5",
+        "@types/node": "11.10.0",
         "codelyzer": "4.5.0",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
-        "karma": "4.0.0",
+        "karma": "4.0.1",
         "karma-chrome-launcher": "2.2.0",
         "karma-cli": "2.0.0",
         "karma-coverage-istanbul-reporter": "2.0.5",
@@ -97,7 +98,7 @@
         "karma-jasmine-html-reporter": "1.4.0",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
-        "modernizr": "3.6.0",
+        "modernizr": "3.7.0",
         "node-sass": "4.11.0",
         "prettier": "1.16.4",
         "protractor": "5.4.2",
@@ -105,7 +106,7 @@
         "stylelint-config-prettier": "5.0.0",
         "stylelint-config-standard": "18.2.0",
         "ts-node": "8.0.2",
-        "tslint": "5.13.0",
+        "tslint": "5.13.1",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.2.4",
         "webpack-bundle-analyzer": "3.0.4"
